--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <body id="page">
     <div class="page">
-        <div class="welcome_popup">
+        <!-- <div class="welcome_popup">
             <img src="assets/images/Instruction_Page_Waste_Warior.png" />
 
             <div class="text-center">
                 <button type="button" class="start_now" id="start_now">START NOW</button> 
             </div>
-        </div>
+        </div> -->
         <div class="winner_popup"><img src="./assets/images/you_win.png" alt="">
             <div style="display: flex;">
                 <button type="button">SHARE</button>
